reactjs/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: reactjs-service 
spec:
  selector:
    app: my-reactjs
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
